--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -175,19 +175,19 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Self-relevance modulates the priorization of the good character in perceptual matching},
+  pdftitle={The good person is me: Spontaneous self-referential process explains the prioritization of moral character},
   pdfauthor={Hu Chuan-Peng1, 2, Kaiping Peng2, \& Jie Sui3},
   pdflang={en-EN},
   pdfkeywords={Perceptual decision-making, Self positivity bias, moral character},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
-\title{Self-relevance modulates the priorization of the good character in perceptual matching}
+\title{The good person is me: Spontaneous self-referential process explains the prioritization of moral character}
 \author{Hu Chuan-Peng\textsuperscript{1, 2}, Kaiping Peng\textsuperscript{2}, \& Jie Sui\textsuperscript{3}}
 \date{}
 
 
-\shorttitle{Priorization of the good character}
+\shorttitle{Priorization of moral character}
 
 \authornote{
 
@@ -203,7 +203,7 @@ Correspondence concerning this article should be addressed to Hu Chuan-Peng, Sch
 \affiliation{\vspace{0.5cm}\textsuperscript{1} Nanjing Normal University, 210024 Nanjing, China\\\textsuperscript{2} Tsinghua University, 100084 Beijing, China\\\textsuperscript{3} University of Aberdeen, Aberdeen, Scotland}
 
 \abstract{%
-Moral character is central to social perception and moral psychology, yet how these information is process is unclear. Both negativity effect and positivity effect are possible. Here, we examined these two possibilities using social associataive learning task, where participants first associat social conceptions with neutral stimuli and then perform cognitive tasks (e.g., matching judgment). Across 9 experiments (N = 4XX, trials = XXX), we found a robust positivity effect: shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. Crucially, good character effect was robust when it referred to the self but weak or non-exist when it referred to a stranger. Moreover, even when identity or moral character information became task-irrelevant, participants were still sensitive to good character: the good-self combination facilitate the process while the good-other combination slowed down the process. Together, these results suggested that good character is prioritized in social associative learning task and this effect was due a spontaneous self-referential processing.
+Moral character is central to social perception and moral psychology, previous studies explain the salience effect of moral character in terms of valence effect, i.e., either negativity effect and positivity effect. In this study, we report 9 experiments (N = 4XX, trials = XXX) where we find (1) there is a robust good character prioritization effect in social associative learning task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) prioritization of good character was robust only when it is relevant to the self but weak or non-exist when it referred to a non-self label; (3) the binding between good character and self exist even when one of the label became task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing as a novel mechanism of the prioritization effect of good character.
 }
 
 
@@ -211,21 +211,31 @@ Moral character is central to social perception and moral psychology, yet how th
 \begin{document}
 \maketitle
 
-Alternative title: The good person is me: Spontaneous self-referential may explain the prioritization of good moral character
+Alternative title: Self-relevance modulates the priorization of the good character in perceptual matching
 
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
 
 {[}quotes about moral character{]}
 
-{[}Morality is central to social life, moral character is the central of morality{]} \textbf{People experience a substantial amount of moral events in everyday life (e.g., Hofmann, Wisneski, Brandt, \& Skitka, 2014) and judging the moral character of people is indispensable part of these events}. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as ``right'' or ``wrong'', and by doing so, we judge people as ``good'' or ``bad'' (Uhlmann, Pizarro, \& Diermeier, 2015). Moral character is so important in social life that it is a basic dimension in our social evaluation (Goodwin, 2015; Goodwin, Piazza, \& Rozin, 2014) and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) (e.g., Dunbar, 2004). These moral character information may help us to evaluate our in-group members and distinguish out-group members (Ellemers, 2018). Crucially, moral character central for self-concept and identity too. A positive moral character is viewed as the core feature of identity (e.g., Strohminger, Knobe, \& Newman, 2017).
+{[}Morality is central to social life, moral character is the central of morality{]} \textbf{People experience a substantial amount of moral events in everyday life (e.g., Hofmann, Wisneski, Brandt, \& Skitka, 2014) and judging the moral character of people is indispensable part of these events}. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as ``right'' or ``wrong'', and by doing so, we judge people as ``good'' or ``bad'' (Uhlmann, Pizarro, \& Diermeier, 2015). Moral character is so important in social life that it is a basic dimension in our social evaluation (Goodwin, 2015; Goodwin, Piazza, \& Rozin, 2014) and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) (e.g., Dunbar, 2004). These moral character information may help us to evaluate our in-group members and distinguish out-group members (Ellemers, 2018).
 
 {[}Two possibilities about moral character{]}
-Given the importance of moral character and limited cognitive resources to process all the information in a social world, will people deferentially process the information related to moral character and prioritize information with certain moral character? One possibility is that `bad' character are prioritized. This possibility is consistent with early studies in impression formation which found that negative traits are weighted more in overall impression (N. H. Anderson, 1965; Fiske, 1980; Skowronski \& Carlston, 1987). This idea also seemed to consistent with the more general idea that ``bad is stronger than good'' (Baumeister, Bratslavsky, Finkenauer, \& Vohs, 2001; Pratto \& John, 1991). A few studies provided evidence for this possibility. For example, E. Anderson, Siegel, Bliss-Moreau, and Barrett (2011) asked participants to associate faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their visual awareness by pressing buttons. The results revealed that faces associated negative social behaviors dominated participants' visual awareness longer than faces associated with other types of behaviors (but see Stein, Grubb, Bertrand, Suh, \& Verosky, 2017). Similarly, Eiserbeck and Abdel Rahman (2020) combined associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially.
+Given the importance of moral character and limited cognitive resources to process all the information in a social world, will people prioritize information with certain moral character? Focus on the valence of moral character, previous studies explore both negativity effect and positivity effect. The negativity effect, i.e., `bad' character are prioritized, is consistent with early studies in impression formation which found that negative traits are weighted more in overall impression (N. H. Anderson, 1965; Fiske, 1980; Skowronski \& Carlston, 1987). This idea also seemed to consistent with the more general idea that ``bad is stronger than good'' (Baumeister, Bratslavsky, Finkenauer, \& Vohs, 2001; Pratto \& John, 1991). A few studies provided evidence for this possibility. For example, E. Anderson, Siegel, Bliss-Moreau, and Barrett (2011) asked participants to associate faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their visual awareness by pressing buttons. The results revealed that faces associated negative social behaviors dominated participants' visual awareness longer than faces associated with other types of behaviors (but see Stein, Grubb, Bertrand, Suh, \& Verosky, 2017). Similarly, Eiserbeck and Abdel Rahman (2020) combined associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially.
 
-It is also possible, however, that the negativity effect in impression formation may not be able to generalized to perceptual process, instead, positive moral characters are prioritized (see recent reviews, Pool, Brosch, Delplanque, \& Sander, 2016; Unkelbach, Alves, \& Koch, 2020). Unkelbach et al. (2020) pointed out that bad is not necessarily stronger than good in all aspects of information processing. Sometimes, good is stronger than bad. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words (Bargh, Chaiken, Govender, \& Pratto, 1992). Similarly, in a lexical decision task, participants judge positive words faster than negative words (Unkelbach et al., 2010). Also, Anisfeld and Lambert (1966) found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) (Anselmi, Vianello, \& Robusto, 2011). Direct evidence for positivity effect of moral character also exist: Shore and Heerey (2013) found that faces with positive interaction in a trust game were prioritized in pre-attentive process.
+The positivity effect, i.e., good moral characters are prioritized, is also plausible (see recent reviews, Pool, Brosch, Delplanque, \& Sander, 2016; Unkelbach, Alves, \& Koch, 2020). Unkelbach et al. (2020) pointed out that bad is not necessarily stronger than good in all aspects of information processing. Sometimes, good is stronger than bad. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words (Bargh, Chaiken, Govender, \& Pratto, 1992). Similarly, in a lexical decision task, participants judge positive words faster than negative words (Unkelbach et al., 2010). Also, Anisfeld and Lambert (1966) found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) (Anselmi, Vianello, \& Robusto, 2011). Direct evidence for positivity effect of moral character also exist: Shore and Heerey (2013) found that faces with positive interaction in a trust game were prioritized in pre-attentive process.
 
-Here, we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences --- participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
+These two possibilities, however, ignore the agency of participants who is perceiving the information and making perceptual decisions. The external stimuli only contain subjective value if they are relevant to the self of the decision-maker {[}{]}. When it comes to moral character, there are long-history of studies showing that moral character is central for people's self-concept and identity. A positive moral character is viewed as the core feature of identity (e.g., Strohminger, Knobe, \& Newman, 2017). A lot of studies revealed that people distort their perception, memory, and change their actions to maintain a positive view of their moral self-view. Given this strong motivation, it is possible that participant has spontaneous self-referential for the perception tasks where no self-referential process were not explicitly excluded {[}citation related to spontaneous self-referential{]}.
+
+Here, we report nine experiments where we found (1) there is a robust good character prioritization effect in social associative learning task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) prioritization of good character was robust only when it is relevant to the self but weak or non-exist when it referred to a non-self label; (3) the binding between good character and self exist even when one of the label became task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing as a novel mechanism of the prioritization effect of good character.
+
+\hypertarget{prioritization-of-moral-chararcter}{%
+\subsection{Prioritization of moral chararcter}\label{prioritization-of-moral-chararcter}}
+
+\hypertarget{using-soical-associative-task}{%
+\subsection{Using soical associative task}\label{using-soical-associative-task}}
+
+we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences --- participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
 
 The positivity effect consistent with previous studies where positivity effect of social trait words were found (Anselmi et al., 2011; Bargh et al., 1992; Unkelbach et al., 2010). However, the effect could not be explained by the similarity hypothesis (Unkelbach et al., 2020) because we only used three stimuli. There are two possibility explanations. The first one is the value-based attention account, which suggests that stimuli that are valuable to us are prioritized (B. A. Anderson, 2019). In our experiments, the good character label ``good person'' may represent an indirect but valuable stimuli because, in social life, a good other is usually more valuable than an bad other (Abele \& Wojciszke, 2007). Another possibility is derived from social categorization theory, which suggested that we automatically categorize others as in-group or out-group (Turner, Hogg, Oakes, Reicher, \& Wetherell, 1987). Moral character is an important criterion for social categorization (DeScioli, 2016; McHugh, McGann, Igou, \& Kinsella, 2019). However, the above four experiments could not distinguish between these two possibilities, because ``good person'' could both be rewarding and be categorized as in-group member. Given that both rewarding stimuli (e.g., Sui, He, \& Humphreys, 2012) and in-group information (Enock, Hewstone, Lockwood, \& Sui, 2020) are prioritized when using social associative learning paradigm, we further tested these two possibilities in new experiments.
 
